--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
-plugins {
-    id 'java'
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url = 'https://files.minecraftforge.net/maven' }
+    }
+    dependencies {
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+    }
 }
+
+apply plugin: 'forge'
+apply plugin: 'maven'
 
 version = "1.0.0"
 group = "com.zachg.economy"
@@ -8,9 +17,6 @@ archivesBaseName = "economy"
 
 sourceCompatibility = targetCompatibility = '1.8'
 
-repositories {
-    mavenCentral()
-}
 
 // Note: This is a simplified build file for CI/CD compilation checks.
 // To build a working Forge mod, you need to:
