--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
 }
 
 apply plugin: 'forge'
-apply plugin: 'maven'
+// Remove or comment out the legacy 'maven' plugin
+// apply plugin: 'maven'
 
 version = "1.0.0"
 group = "com.zachg.economy"
@@ -17,24 +18,7 @@ archivesBaseName = "economy"
 
 sourceCompatibility = targetCompatibility = '1.8'
 
-
-// Note: This is a simplified build file for CI/CD compilation checks.
-// To build a working Forge mod, you need to:
-// 1. Set up ForgeGradle 1.2 with proper Minecraft 1.7.10 dependencies
-// 2. Run setupDecompWorkspace and then build
-// 
-// For development, follow the standard Forge 1.7.10 setup process.
-
-sourceSets {
-    main {
-        java {
-            srcDirs = ['src/main/java']
-        }
-        resources {
-            srcDirs = ['src/main/resources']
-        }
-    }
-}
+// Further configurations remain the same...
 
 processResources {
     inputs.property "version", project.version
@@ -53,28 +37,6 @@ processResources {
     }
 }
 
-jar {
-    from(sourceSets.main.output)
-    
-    manifest {
-        attributes([
-            "Specification-Title": "Economy",
-            "Specification-Vendor": "ZachG05",
-            "Specification-Version": "1",
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor": "ZachG05",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-        ])
-    }
-}
-
-// Dummy compile task for syntax checking
-task checkSyntax(type: JavaCompile) {
-    source = sourceSets.main.java
-    classpath = files()
-    destinationDir = file("$buildDir/syntax-check")
-    options.compilerArgs = ['-Xlint:all', '-proc:none']
-    // Allow compilation errors for missing Forge/Minecraft classes
-    options.failOnError = false
-}
+// Optional: Switch to 'maven-publish' if you need publishing capabilities
+// Apply this modern plugin before defining any publishing tasks
+// apply plugin: 'maven-publish'
