Add maven-publish plugin to build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 }
 
 apply plugin: 'forge'
+apply plugin: 'maven-publish'
 // Remove or comment out the legacy 'maven' plugin
 // apply plugin: 'maven'
 
