--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,9 @@ buildscript {
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
-apply plugin: 'maven-publish'
+//apply plugin: 'maven-publish'
 // Remove or comment out the legacy 'maven' plugin
-// apply plugin: 'maven'
+apply plugin: 'maven'
 
 version = "1.0.0"
 group = "com.zachg.economy"
