--- a/build.gradle
+++ b/build.gradle
@@ -1,64 +1,10 @@
-buildscript {
-    repositories {
-        maven {
-            name = "forge"
-            url = "https://maven.minecraftforge.net"
-        }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
-        maven {
-            name = "Scala CI dependencies"
-            url = "https://repo1.maven.org/maven2/"
-        }
-        maven {
-            name = "jitpack"
-            url = "https://jitpack.io"
-        }
-    }
-    dependencies {
-        classpath 'com.github.GTNewHorizons:ForgeGradle:1.2.5'
-    }
+//version: 1707058017
+
+plugins {
+    id 'com.gtnewhorizons.gtnhconvention'
 }
 
-apply plugin: 'forge'
-
-version = "1.7.10-1.0.2"
-group = "com.zachg.economy"
-archivesBaseName = "economy"
-
-minecraft {
-    version = forgeVersion
-	runDir = "eclipse"
-
-    replaceIn "src/main/java/com/zachg/economy/EconomyMod.java"
-    replace "GRADLETOKEN_VERSION", project.version.split('-')[1]
-}
-
-repositories {
-	maven {
-		name = "ic2"
-		url = "http://maven.ic2.player.to/"
-	}
-}
-
-dependencies {
-    compile ic2Version
-}
-
-
-processResources {
-    def cleanVersion = project.version.split('-')[1]
-    
-    inputs.property "version", cleanVersion
-    inputs.property "mcversion", project.minecraft.version
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-    }        
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-    }
-
+// workaround an OOM on GH actions during the checkStyleMain task
+tasks.withType(Checkstyle).configureEach {
+    maxHeapSize = "1g"
 }
