--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,21 @@
-rootProject.name = 'Economy'
+
+pluginManagement {
+    repositories {
+        maven {
+            // RetroFuturaGradle
+            name = "GTNH Maven"
+            url = "https://nexus.gtnewhorizons.com/repository/public/"
+            mavenContent {
+                includeGroup("com.gtnewhorizons")
+                includeGroupByRegex("com\\.gtnewhorizons\\..+")
+            }
+        }
+        gradlePluginPortal()
+        mavenCentral()
+        mavenLocal()
+    }
+}
+
+plugins {
+    id 'com.gtnewhorizons.gtnhsettingsconvention' version '2.0.5'
+}
